# tgreddit

./: Cargo.toml  Dockerfile
src/: args.rs  bot.rs  config.rs  db.rs  download.rs  handle_post.rs  main.rs  messages.rs  types.rs  ytdlp.rs
src/reddit/: api.rs  types.rs
